      \item Allow hyperparameters of group-level effects
      to vary over the levels of a categorical covariate 
      using argument \code{by} in function \code{gr}. (#365)
      \item Allow predictions of measurement-error models
      with new data. (#335)
      \item Pass user-defined variables to Stan via 
      \code{stanvar}. (#219, #357)
      \item Model covariates in multi-membership structures
      that vary over the levels of the grouping factor
      via \code{mmc} terms. (#353)
      \item Fit shifted log-normal models via
      family \code{shifted_lognormal}. (#218)
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Change the parameterization of \code{weibull} and 
      \code{exgaussian} models to be consistent with other model 
      classes. Post-processing of related models fitted with 
      earlier version of \pkg{brms} is no longer possible.
      \item Treat integer responses in \code{ordinal} models 
      as directly indicating categories even if the lowest 
      integer is not one.
      \item Improve output of the \code{hypothesis} method 
      thanks to the ideas of Matti Vuorre. (#362)
      \item Always plot \code{by} variables as facets
      in \code{marginal_smooths}.
      \item Deprecate the \code{cor_bsts} correlation structure.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Allow the \code{:} operator to combine 
      groups in multi-membership terms thanks to
      Gang Chen.
      \item Avoid an unexpected error when calling 
      \code{LOO} with argument \code{reloo = TRUE}
      thanks to Peter Konings. (#348)
      \item Fix problems in \code{predict} when applied to
      categorical models thanks to Lydia Andreyevna Krasilnikova
      and Thomas Vladeck. (#336, #345)
      \item Allow truncation in multivariate models with
      missing values thanks to Malte Lau Petersen. (#380)
      \item Force time points to be unique within groups in 